--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1282,9 +1282,9 @@ these is discussed in informative annexes of this \IS.
 
 It is expected that DOL will be used for other languages than the  set of DOL-conforming
 languages that are discussed in this \IS. There is a  \textbf{\termref{registry} for DOL-conforming languages and translations} hosted
-at \url{http://ontohub.org}.  The registry shall also include descriptions of
+at \url{http://ontohub.org}.  The registry  also includes descriptions of
 DOL-conforming languages and translations (as well as other information needed by implementors
-and users) in machine-processable form.  
+and users) in both human-readable and machine-processable form.  
 
 There will be Maintenance Authority (MA)\footnote{or, depending on advisability, a Registration
 Authority} established to maintain the registry as an informative resource governed by the
