--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4877,7 +4877,7 @@ $L_1 \bigcup L_2 = (L, \rho_1:L1 \to L, \rho_2 : L_2 \to L)$, when defined. Fina
 and at most one morphism is marked as default.
 
 We assume that for each institution, there exist (possibly partial) union and difference operations on signatures.
-These concepts can be captured in a categorical setting using \emph{inclusion systems} \cite{Diaconescu1993}.
+These concepts can be captured in a categorical setting using \emph{inclusion systems} \cite{DGS91}.
 However, inclusion systems are too strong for our purposes and therefore we will work under weaker assumptions.
 
 \begin{definition}  
