--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -664,3 +664,55 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+
+
+@inproceedings{DBLP:conf/birthday/GoguenR04,
+  author    = {Joseph A. Goguen and
+               Grigore Rosu},
+  title     = {Composing Hidden Information Modules over Inclusive Institutions},
+  booktitle = {From Object-Orientation to Formal Methods, Essays in Memory of Ole-Johan
+               Dahl},
+  pages     = {96--123},
+  year      = {2004},
+  crossref  = {DBLP:conf/birthday/2004dahl},
+  url       = {http://dx.doi.org/10.1007/978-3-540-39993-3_7},
+  doi       = {10.1007/978-3-540-39993-3_7},
+  timestamp = {Tue, 05 Jul 2011 11:03:12 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/birthday/GoguenR04},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@proceedings{DBLP:conf/birthday/2004dahl,
+  editor    = {Olaf Owe and
+               Stein Krogdahl and
+               Tom Lyche},
+  title     = {From Object-Orientation to Formal Methods, Essays in Memory of Ole-Johan
+               Dahl},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {2635},
+  publisher = {Springer},
+  year      = {2004},
+  isbn      = {3-540-21366-X},
+  timestamp = {Fri, 12 Mar 2004 08:54:39 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/birthday/2004dahl},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/ai/KontchakovWZ10,
+  author    = {Roman Kontchakov and
+               Frank Wolter and
+               Michael Zakharyaschev},
+  title     = {Logic-based ontology comparison and module extraction, with an application
+               to DL-Lite},
+  journal   = {Artif. Intell.},
+  volume    = {174},
+  number    = {15},
+  pages     = {1093--1141},
+  year      = {2010},
+  url       = {http://dx.doi.org/10.1016/j.artint.2010.06.003},
+  doi       = {10.1016/j.artint.2010.06.003},
+  timestamp = {Thu, 09 Sep 2010 10:40:31 +0200},
+  biburl    = {http://dblp2.uni-trier.de/rec/bib/journals/ai/KontchakovWZ10},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
