--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6722,22 +6722,6 @@ We additionally need to axiomatize a number of predicates in Common Logic
 \begin{lstlisting}[language=clif,morekeywords={then,with,logic,oms,end},mathescape]
 logic CLIF
 
-oms uml-enumerations =
-(distinct)        // the empty sequence is distinct
-(distinct x)    // singleton sequences are distinct
-(iff (distinct x y ...) // recursion for length > 1
-     (and (not (= x y))       // the first two elements must be different
-          (distinct x ...)    // and each of them distinct
-          (distinct y ...) )) // to the rest
-
-(iff (exhaustive c ...) (forall (x) (if (c x) (oneof x ...))))
-     // does ... exhaust the extension of c?
-(not (oneof x)) // is x among the remaining arguments?
-(iff (oneof x y ...) (or (= x y) (oneof x ...)))
-(iff (enumeration c ...) (and (exhaustive c ...) (distinct ...)))
-   // c is an enumeration type with values ...
-end
-
 oms pairs =
   (forall (x y) (= (form:first (form:pair x y)) x))
   (forall (x y) (= (form:second (form:pair x y)) y))
@@ -7017,7 +7001,7 @@ end
 
 
 oms uml-cd-preliminaries =
-  uml-enumerations and collection-types and pairs
+  collection-types and pairs
 end
 
 \end{lstlisting}
@@ -7312,7 +7296,8 @@ $CL(\Sigma)$ consisting of:
   $\CL(\mathsf{Real}) = \texttt{buml:Real}$,
 \item 
   $\CL(\mathsf{c}) = c$, if $c$ is an enumeration type with values $k_1,\ldots,k_n$. In this case, additionally, the Common Logic theory is augmented by
-\texttt{(enumeration $c$ $k_1 \cdots k_n$)},\ednote{Ed Seidewitz:
+\texttt{(not (= $k_i \cdots k_j$))} for $i\neq j$ and
+\texttt{(forall (x) (if (c x) (or (= x $k_1$) $\cdots$ (= x $k_n$))))},\ednote{Ed Seidewitz:
 enumerations are specializable, but this is type-unsafe, so maybe omit it}
 \item 
   $\CL(\mathsf{List}[c]) = \texttt{form:Sequence}$,
@@ -7396,7 +7381,9 @@ at most one owner'':
             (= o o')))
 \end{lstlisting}
   \item \CL maps each association declaration $a(p_1 : \tau_1[c_1], \ldots, p_r : \tau_r[c_r])\in A$ to a predicate $\CL(a)$ and axioms stating that $\CL(a)$ is a finite relation represented as a sequence of tuples of the correct types (the latter again
-being represented as sequences):\\
+being represented as sequences)\footnote{Ignoring the annotations $\tau_i$ in the interpretation of an association is intentional, see OMG UML version 2.5 (ptc/2013-09-05) in section 11.5.3: ``When one or more ends of the Association have isUnique =false, it is possible to have several links associating the same set of
+instances. In such a case, links carry an additional identifier apart from their end values.
+When one or more ends of the Association are ordered, links carry ordering information in addition to their end values.'' We cover the additional information required for links by using sequences of tuples.}:\\
 \texttt{(from:Sequence a)}\\
 \texttt{(forall (t) (if (form:sequence-member t a)\\
 \qqquad\qqquad  (exists ($x_1$ $\cdots$ $x_r$)\\
