--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -716,3 +716,12 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@article{RabKoh:WSMSML13,
+  author = {Florian Rabe and Michael Kohlhase},
+  title = {A Scalable Module System},
+  journal = {Information \& Computation},
+  url = {http://kwarc.info/frabe/Research/mmt.pdf},
+  year=2013,
+  pages = "1--95",
+  pubs = {mkohlhase,frabe,projects/omdoc}}
+
