--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3570,7 +3570,7 @@ some non-logical symbols are hidden, but the semantic effect of sentences involv
 \item an extension of an OMS with a basic or a minimizable OMS, optionally named and/or marked as conservative, monomorphic, definitional or implied,
 \item a reference to an OMS existing on the Web,
 \item an OMS qualified with the OMS language that is used to express it,
-\item a combination of OMS network (technically, this is a colimit, see \cite{ZimmermanEtAl06}),
+\item a combination of an OMS network (technically, this is a colimit, see \cite{ZimmermanEtAl06}),
 \item a minimization of an OMS, forcing the subsequently declared
   non-logical symbols to be interpreted in a minimal way, while the non-logical symbols declared so far are fixed (alternatively, the non-logical symbols to be minimized and to be varied can be explicitly declared). \red{Variants are
 maximization, freeness (minimizing also data sets and equalities on these), and cofreeness
