credit for Tim Reddehase

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2610,6 +2610,7 @@ The following people contributed directly to the development of this specificati
 	\item Till Mossakowski, Otto-von-Guericke University Magdeburg, Germany  	
 	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg, Germany  	  
 	\item Leo Obrst, MITRE, USA
+        \item Tim Reddehase, University of Bremen, Germany
         \item Madhura Thosar, Otto-von-Guericke University Magdeburg, Germany
    
 	\end{itemize}
@@ -9061,7 +9062,7 @@ effort API4KB.
 
 
 \infannex{Ontohub loc/id v2}\label{loc/id}
-by Tim Reddehase
+
 
 
 \lstset{ %
